# ROBOTMOVILTD3

./: .gitattributes  .gitignore
V1.0 Coppelia TD3PrimitiveTF/: Escenario_Laberinto.ttt  main.py  td3_tf2.py
V2.0 PyGame TD3PrimitiveTF/: main.py
V2.0 PyGame TD3PrimitiveTF/src/: Enviroment.py  __int__.py
V2.1 Pygame TD3PrimitiveTF Vectorize/: LearnInv.py  RegisterEnv.py  VecEnvDifSeed.py  VecEnvSameSeed.py  main.py
V2.1 Pygame TD3PrimitiveTF Vectorize/src/: EnvGym.py  Enviroment.py  TD3.py  __int__.py
V2.2 Pygame StablelineTD3 Vectorize/: VecEnvDifSeed.py  main.py
V2.2 Pygame StablelineTD3 Vectorize/src/: EnvGym.py
V3.0 PyBullet Rover  TD3PrimitiveTFGraphs Vectorize/: VecEnvSeed.py  timings_0.json
V3.0 PyBullet Rover  TD3PrimitiveTFGraphs Vectorize/ROVER 2025 MOVIL URDF/: CMakeLists.txt  package.xml
V3.0 PyBullet Rover  TD3PrimitiveTFGraphs Vectorize/ROVER 2025 MOVIL URDF/launch/: display.launch
V3.0 PyBullet Rover  TD3PrimitiveTFGraphs Vectorize/ROVER 2025 MOVIL URDF/meshes/: Direccion_Delantera_R.STL  Direccion_Trasera_L.STL  Rocker_R.STL  Rueda_Delantera_R.STL  Rueda_Trasera_L.STL  Rueda_Trasera_R.STL
V3.0 PyBullet Rover  TD3PrimitiveTFGraphs Vectorize/ROVER 2025 MOVIL URDF/urdf/: ROVER 2025 MOVIL URDF.urdf
V3.0 PyBullet Rover  TD3PrimitiveTFGraphs Vectorize/V5.0/: LearnInv.py  Peso URDF.xlsx  main.py
V3.0 PyBullet Rover  TD3PrimitiveTFGraphs Vectorize/src/: EnvGym.py  EnviromentBullet.py  TD3.py
V3.1 PyBullet Rover StablelineTD3 Vectorize/: RegisterEnv.py  TestEnv.py  VecEnvSeed.py  main.py  stdout  timings_1.json
(+14 files in other folders)
